--- a/Backscape/Assets/UI Example/uxml&uss/tutorial_page.uxml
+++ b/Backscape/Assets/UI Example/uxml&uss/tutorial_page.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Example/uxml&amp;uss/style.uss?fileID=7433441132597879392&amp;guid=7ddde310778bfbc439a83b8d2b2b2a80&amp;type=3#style" />
-    <ui:GroupBox name="container" class="container" style="width: 100%; flex-grow: 0; align-items: stretch; margin-left: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;">
-        <ui:VisualElement name="navigation_panel" class="theme navigation" style="height: 50px; min-height: auto; max-height: none; min-width: auto; max-width: none; width: 100%; flex-grow: 0; position: relative; top: auto; left: auto; flex-shrink: 1;">
+    <ui:GroupBox name="container" class="container" style="width: 100%; flex-grow: 0; align-items: stretch; margin-left: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; background-color: rgb(56, 56, 56);">
+        <ui:VisualElement name="navigation_panel" class="theme navigation" style="height: 50px; min-height: auto; max-height: none; min-width: auto; max-width: none; width: 100%; flex-grow: 0; position: absolute; top: auto; left: auto; flex-shrink: 1;">
             <ui:VisualElement name="control_panel" class="control_panel" style="width: 70%; height: 100%; flex-direction: row; flex-grow: 8;">
                 <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="back_btn" class="back_btn" />
                 <ui:Label tabindex="-1" text="Video" display-tooltip-when-elided="true" name="page_name" class="page_name" style="-unity-text-align: middle-left;" />
@@ -10,24 +10,84 @@
                 <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="search_btn" class="search_btn" style="border-left-width: 0; border-right-width: 0; border-top-width: 0; border-bottom-width: 0; border-top-left-radius: 0; border-bottom-left-radius: 0; border-top-right-radius: 0; border-bottom-right-radius: 0; background-image: url(&apos;project://database/Assets/UI%20Example/img/search_btn.png?fileID=2800000&amp;guid=17c3d3493f1f61b4fb092d79bf4ad0c6&amp;type=3#search_btn&apos;);" />
             </ui:VisualElement>
         </ui:VisualElement>
-        <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="150" name="scroll_view" mode="Vertical" usage-hints="MaskContainer" focusable="true" touch-scroll-type="Unrestricted" nested-interaction-kind="ForwardScrolling" vertical-page-size="-1" horizontal-scroller-visibility="Hidden" vertical-scroller-visibility="AlwaysVisible" horizontal-page-size="-1" style="flex-direction: row; flex-wrap: wrap; justify-content: center; flex-grow: initial; align-items: flex-start; width: 100%; top: auto; overflow: visible; visibility: visible; flex-shrink: initial; opacity: 0.78; height: 100%; background-color: rgb(255, 255, 255);">
-            <ui:VisualElement name="content" class="content" style="justify-content: space-between; flex-grow: 3;">
-                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255);">
+        <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="scrollview" style="justify-content: flex-start; padding-bottom: 100px; top: 50px;">
+            <ui:VisualElement name="content" class="content" style="justify-content: space-between; flex-grow: 1; flex-basis: auto; flex-direction: row; height: auto; width: auto; align-items: stretch; background-color: rgb(255, 255, 255); opacity: 0.77;">
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
                     <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
                     <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
                     <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
                 </ui:Button>
-                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255);">
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
                     <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
                     <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
                     <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
                 </ui:Button>
-                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255);">
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
                     <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
                     <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
                     <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
                 </ui:Button>
-                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255);">
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
+                    <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
+                    <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
+                    <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
+                </ui:Button>
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
+                    <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
+                    <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
+                    <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
+                </ui:Button>
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
+                    <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
+                    <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
+                    <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
+                </ui:Button>
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
+                    <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
+                    <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
+                    <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
+                </ui:Button>
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
+                    <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
+                    <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
+                    <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
+                </ui:Button>
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
+                    <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
+                    <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
+                    <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
+                </ui:Button>
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
+                    <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
+                    <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
+                    <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
+                </ui:Button>
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
+                    <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
+                    <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
+                    <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
+                </ui:Button>
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
+                    <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
+                    <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
+                    <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
+                </ui:Button>
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
+                    <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
+                    <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
+                    <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
+                </ui:Button>
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
+                    <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
+                    <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
+                    <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
+                </ui:Button>
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
+                    <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
+                    <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
+                    <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
+                </ui:Button>
+                <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item" style="background-color: rgb(255, 255, 255); width: auto; flex-basis: auto; flex-shrink: 1; flex-direction: column; max-width: none; max-height: initial; height: auto;">
                     <ui:VisualElement name="img" class="item_img" style="flex-direction: row; flex-grow: 5;" />
                     <ui:Label tabindex="-1" text="Lorem Ipsum" display-tooltip-when-elided="false" name="name" class="item_name" />
                     <ui:ProgressBar title="item-progress" name="item_progress" class="item_progress" />
