--- a/Backscape/Assets/UI Example/uxml&uss/tutorial_page.uxml
+++ b/Backscape/Assets/UI Example/uxml&uss/tutorial_page.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
     <Style src="project://database/Assets/UI%20Example/uxml&amp;uss/style.uss?fileID=7433441132597879392&amp;guid=7ddde310778bfbc439a83b8d2b2b2a80&amp;type=3#style" />
-    <ui:VisualElement name="main_container" style="width: 100%; height: 100%; margin-bottom: -20px;">
+    <ui:VisualElement name="main_container" style="width: 100%; height: 100%; margin-bottom: 0;">
         <ui:VisualElement name="container" usage-hints="-1" class="container" style="right: 0; flex-basis: 100%; flex-shrink: 0; flex-grow: 0; top: 0; min-width: 100%; min-height: 100%; bottom: 2px; margin-bottom: -20px;">
             <ui:VisualElement name="navigation_panel" class="theme navigation" style="height: 50px; min-height: auto; max-height: none; min-width: auto; max-width: none; width: 100%; flex-grow: 0; position: absolute; top: 0; left: 0; flex-shrink: 1; bottom: auto;">
                 <ui:VisualElement name="control_panel" class="control_panel" style="width: 70%; height: 100%; flex-direction: row; flex-grow: 8;">
@@ -11,7 +11,7 @@
                     <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="search_btn" class="search_btn" style="border-left-width: 0; border-right-width: 0; border-top-width: 0; border-bottom-width: 0; border-top-left-radius: 0; border-bottom-left-radius: 0; border-top-right-radius: 0; border-bottom-right-radius: 0; background-image: url(&apos;project://database/Assets/UI%20Example/img/search_btn.png?fileID=2800000&amp;guid=17c3d3493f1f61b4fb092d79bf4ad0c6&amp;type=3#search_btn&apos;);" />
                 </ui:VisualElement>
             </ui:VisualElement>
-            <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="scrollview" vertical-scroller-visibility="Auto" horizontal-scroller-visibility="Hidden" mode="Vertical" focusable="false" vertical-page-size="2" style="justify-content: flex-start; padding-bottom: 100px; top: 50px; transition-property: all; transition-duration: 0s; width: 100%; height: 100%; flex-shrink: 0;">
+            <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="scrollview" vertical-scroller-visibility="Auto" horizontal-scroller-visibility="Hidden" mode="Vertical" focusable="false" vertical-page-size="2" style="justify-content: flex-start; padding-bottom: 0; top: 50px; transition-property: all; transition-duration: 0s; width: 100%; height: 100%; flex-shrink: 0; margin-bottom: -70px;">
                 <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="content" class="content" style="background-color: rgb(255, 255, 255); opacity: 0.71; display: flex; scale: 1 1;">
                     <ui:VisualElement name="contentUnused" class="content" style="justify-content: center; flex-grow: 1; flex-basis: auto; flex-direction: row; height: auto; width: auto; align-items: stretch; background-color: rgb(255, 255, 255); opacity: 0.77; display: none;">
                         <ui:Button tabindex="-1" display-tooltip-when-elided="true" name="item" class="item item_btn">
